Fix class diagram not showing

--- a/src/pages/Home/components/Mermaid/styles/mermaid.css
+++ b/src/pages/Home/components/Mermaid/styles/mermaid.css
@@ -6,6 +6,5 @@
 
 .mermaid-container {
   width: 100%;
-  height: 500px;
   font-size: 20px;
 }
